# lieplusplus_py

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.gitea/workflows/: ci.yml  docs.yml  publish.yml
.github/workflows/: docs.yml  publish.yml
docs/: api.md  contributing.md  examples.md  golden-path.md  index.md  troubleshooting.md  usage.md
docs/golden-path/: adrs.md  prereqs.md  toolchain.md  tutorials.md
examples/: basic_usage.py
scripts/ci/: lint.sh  pre-commit.sh  run_locally.sh  semgrep.sh  setup-env.sh  test.sh  trufflehog.sh  trufflehog_excludes.txt  typecheck.sh
scripts/docs/: generate_stubs.sh
scripts/release/: build.sh  build_publish.sh  publish.sh  publish_ci.sh
src/: bindings.cpp  pybind_batch.hpp
src/lieplusplus/: __init__.py  _core.pyi
src/lieplusplus/_core/: __init__.pyi  batch.pyi
tests/: test_array_ops.py  test_basic.py  test_batch.py
